--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
@@ -49,3 +49,14 @@ when@test:
                 cost: 4 # Lowest possible value for bcrypt
                 time_cost: 3 # Lowest possible value for argon
                 memory_cost: 10 # Lowest possible value for argon
+    firewalls:
+        api:
+            pattern: ^/api
+            security: false
+        api_jwt:
+            pattern: ^/api/
+            security: true
+            stateless: true
+            jwt: ~
+    access_control:
+        - { path: ^/api, roles: is_admin }
