--- a/back/config/packages/lexik_jwt_authentication.yaml
+++ b/back/config/packages/lexik_jwt_authentication.yaml
@@ -1,4 +1,19 @@
 lexik_jwt_authentication:
-    secret_key: '%env(resolve:JWT_SECRET_KEY)%'
-    public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
-    pass_phrase: '%env(JWT_PASSPHRASE)%'
+    secret_key: "%env(resolve:JWT_SECRET_KEY)%"
+    public_key: "%env(resolve:JWT_PUBLIC_KEY)%"
+    pass_phrase: "%env(JWT_PASSPHRASE)%"
+    token_extractors:
+        cookie:
+            enabled: true
+            name: BEARER
+    set_cookies:
+        BEARER:
+            lifetime: 3600
+            domain: "%env(COOKIE_DOMAIN)%"
+            secure: false
+            httpOnly: false
+            partitioned: false
+    api_platform:
+        check_path: /auth
+        username_path: email
+        password_path: password
