feat(back): adding re rule to the makefile + working on the /me

--- a/back/Makefile
+++ b/back/Makefile
@@ -7,3 +7,10 @@ install:
 	symfony console d:m:c
 	symfony console d:m:m
 	symfony console doctrine:fixtures:load
+
+start:
+	symfony serve --allow-http
+
+re:
+	make clean
+	make start
