feat: connecting the front to the dns + adding cors protection

--- a/back/Caddyfile
+++ b/back/Caddyfile
@@ -1,5 +1,12 @@
 api.jobspot.wip {
-    tls internal
-
     reverse_proxy localhost:8000
+    tls internal
+    header Access-Control-Allow-Origin *
+    header Access-Control-Allow-Methods "GET, POST, OPTIONS, PUT, DELETE"
+    header Access-Control-Allow-Headers *
+}
+
+jobspot.wip {
+    reverse_proxy localhost:4200
+    tls internal
 }
