--- a/back/.env
+++ b/back/.env
@@ -30,9 +30,9 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/jobspot?serverVersion=8.0.32&charset=u
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=https://jobspot.wip
+COOKIE_DOMAIN=.jobspot.wip
 ###< nelmio/cors-bundle ###
-COOKIE_DOMAIN=api.jobspot.wip
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
