fix: guard authentification

--- a/back/.env
+++ b/back/.env
@@ -31,7 +31,7 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/jobspot?serverVersion=8.0.32&charset=u
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=https://jobspot.wip
-COOKIE_DOMAIN=.jobspot.wip
+COOKIE_DOMAIN=jobspot.wip
 ###< nelmio/cors-bundle ###
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
