--- a/back/config/packages/security.yaml
+++ b/back/config/packages/security.yaml
@@ -31,4 +31,6 @@ security:
         - { path: ^/docs, roles: PUBLIC_ACCESS }
         - { path: ^/contexts, roles: PUBLIC_ACCESS }
         - { path: ^/auth, roles: PUBLIC_ACCESS }
+        - { path: ^/api/companies/by-offer, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api/offers, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api, roles: PUBLIC_ACCESS }
